<resources>
    <string name="app_name">ChatIncognito</string>
    <string name="login">login</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="incognito">Incognito</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register_header">Register</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
</resources>